<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/backgroundLight"
        android:elevation="2dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toStartOf="@+id/btn_conectar"
            android:text="@string/monitor"
            android:textAllCaps="true"
            android:textColor="?android:textColorSecondary"
            android:textSize="24sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/btn_conectar"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginHorizontal="16dp"
            android:layout_toStartOf="@+id/btn_menu"
            android:contentDescription="@string/conectar"
            android:padding="2dp"
            android:src="@drawable/ic_outline_link_24"
            app:tint="?android:textColorSecondary" />

        <ImageView
            android:id="@+id/btn_menu"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_alignParentEnd="true"
            android:contentDescription="@string/btn_abrir_configuracoes"
            android:src="@drawable/ic_baseline_menu_24"
            app:tint="?android:textColorSecondary" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="16sp"
        android:layout_marginTop="16sp"

        android:orientation="vertical">

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_r16"
            android:backgroundTint="?android:colorSecondary"
            android:baselineAligned="false"
            android:elevation="1dp"
            android:orientation="horizontal"
            android:paddingHorizontal="16dp"
            android:paddingVertical="16dp"
            android:weightSum="3">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="80dp"
                    android:layout_height="80dp">

                    <com.google.android.material.progressindicator.CircularProgressIndicator
                        android:id="@+id/progress_batimentos"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_centerInParent="true"
                        android:progress="0"
                        app:indicatorColor="@color/accentRed"
                        app:indicatorDirectionCircular="counterclockwise"
                        app:indicatorSize="80dp"
                        app:trackColor="?android:colorPrimary"
                        app:trackCornerRadius="50dp"
                        app:trackThickness="10dp" />

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_centerInParent="true"
                        android:contentDescription="@string/batimentos"
                        android:padding="24dp"
                        android:src="@drawable/ic_pulse_svgrepo_com"
                        app:tint="@color/accentRed" />
                </RelativeLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/batimentos"
                    android:textAlignment="center"
                    android:textAllCaps="true"
                    android:textColor="?android:textColor"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/tv_batimentos"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/zero"
                    android:textAlignment="center"
                    android:textColor="?android:textColorSecondary"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="80dp"
                    android:layout_height="80dp">

                    <com.google.android.material.progressindicator.CircularProgressIndicator
                        android:id="@+id/progress_oxigenacao"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_centerInParent="true"
                        android:progress="0"
                        app:indicatorColor="@color/accentBlue"
                        app:indicatorDirectionCircular="counterclockwise"
                        app:indicatorSize="80dp"
                        app:trackColor="?android:colorPrimary"
                        app:trackCornerRadius="50dp"
                        app:trackThickness="10dp" />

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_centerInParent="true"
                        android:contentDescription="@string/oxigena_o"
                        android:padding="8dp"
                        android:src="@drawable/ic_oxygen_svgrepo_com"
                        app:tint="@color/accentBlue" />
                </RelativeLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/oxigena_o"
                    android:textAlignment="center"
                    android:textAllCaps="true"
                    android:textColor="?android:textColor"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/tv_oxigenacao"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/zero"
                    android:textAlignment="center"
                    android:textColor="?android:textColorSecondary"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="80dp"
                    android:layout_height="80dp">

                    <com.google.android.material.progressindicator.CircularProgressIndicator
                        android:id="@+id/progress_passos"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_centerInParent="true"
                        android:progress="0"
                        app:indicatorColor="@color/accentGreen"
                        app:indicatorDirectionCircular="counterclockwise"
                        app:indicatorSize="80dp"
                        app:trackColor="?android:colorPrimary"
                        app:trackCornerRadius="50dp"
                        app:trackThickness="10dp" />

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_centerInParent="true"
                        android:contentDescription="@string/passos"
                        android:padding="24dp"
                        android:src="@drawable/ic_walk_svgrepo_com"
                        app:tint="@color/accentGreen" />
                </RelativeLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/passos"
                    android:textAlignment="center"
                    android:textAllCaps="true"
                    android:textColor="?android:textColor"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/tv_passos"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/zero"
                    android:textAlignment="center"
                    android:textColor="?android:textColorSecondary"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>

        </LinearLayout>

        <RelativeLayout
            android:id="@+id/re_historico"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_toStartOf="@+id/tv_ver_todos"
                android:labelFor="@id/recycler_historico"
                android:text="@string/hist_rico"
                android:textColor="?android:textColorSecondary"
                android:textSize="32sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_ver_todos"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:text="@string/ver_todos"
                android:textAlignment="center"
                android:textColor="?android:textColor"
                android:textSize="14sp"
                android:textStyle="bold" />

        </RelativeLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_historico"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/lista_historico" />

    </LinearLayout>
</LinearLayout>